<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.mvpEmail.Email">

    <TextView
        android:id="@+id/tv_Firebase_Email_Authentication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firebaseEmailAuthentication"

        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060000002" />

    <RelativeLayout
        android:id="@+id/rl_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26">

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/welcome"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_user_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_welcome"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/userData"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_disconect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_user_data"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_normal_effect"
            android:text="@string/signOut" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44">


        <EditText
            android:id="@+id/edt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:autofillHints="@string/fill_field"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/edt_userPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_email"
            android:layout_centerHorizontal="true"
            android:autofillHints="@string/fill_field"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/bt_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_userPass"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_border_effect"
            android:text="@string/sign_in" />

        <Button
            android:id="@+id/bt_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_userPass"
            android:layout_alignParentRight="true"
            android:layout_margin="30dp"
            android:background="@drawable/button_normal_effect"
            android:text="@string/sign_up" />

        <Button
            android:id="@+id/bt_sign_in_without_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bt_sign_up"
            android:layout_centerInParent="true"
            android:background="@drawable/button_normal_effect"
            android:text="@string/sign_in_without_password" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_email_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""

        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <include
        android:id="@+id/include_loading"
        layout="@layout/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>